Home feature coding

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -4,7 +4,7 @@ extent.reporter.spark.config=src/test/resources/extent-config.xml
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
-extent.reporter.pdf.start=false
+extent.reporter.pdf.start=true
 extent.reporter.pdf.out=test output/PdfReport/ExtentPdf.pdf
 extent.reporter.spark.basefolder.name=Reports
 extent.reporter.spark.basefolder.datetimepattern=d-MMM-yy HH-mm-ss
@@ -16,8 +16,8 @@ extent.cucumber.reporter.classname.replace=false
 extent.reporter.spark.append=true
 
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
-
-#systeminfo.os=Windows
-#systeminfo.user=Gayathri Sekar
+#
+#systeminfo.os=OS_PLACEHOLDER
+#systeminfo.user=USER_PLACEHOLDER
 #systeminfo.build=1.1
-#systeminfo.AppName=Opencart Application
+#systeminfo.AppName=DsAlgo Application
