--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,13 @@
             <artifactId>allure-cucumber7-jvm</artifactId>
             <version>2.25.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.13.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
