--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <includes>**/TestRunner</includes>
+                    <parallel>methods</parallel>
+                    <threadCount>4</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                </configuration>
             </plugin>
 
             <!--  Allure Maven Plugin -->
