Login and url changes in DS Introduction feature

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,3 +2,5 @@ browser=chrome
 url=https://dsportalapp.herokuapp.com/
 RegisterText=Register
 SignInText=Sign in
+Username=sgs123@gmail.com
+Password=Stars@123
