Revert "Resolved merge conflights" Syeda
This reverts commit c8ff6b0c64f36c63b7cb94cb845d58b79e293d17, reversing
changes made to 07693db88d1de7c7e32045598422c8e7261426e9.

--- a/.gitignore
+++ b/.gitignore
@@ -38,15 +38,8 @@ build/
 ### Mac OS ###
 .DS_Store
 
-# Test & automation artifacts
 test-output/
-Reports/
-logs/
-
-# Report files
-*.png
-*.pdf
-*.html
-
+test output/
 .idea/
-
+allure-results/
+logs/
