--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,6 +1,9 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/DSAlgo_Automation_Report.html
+extent.reporter.spark.out=test-output/ExtentReport.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
+
+extent.reporter.spark.base64imagesrc=true
+extent.reporter.spark.timeline.enabled=true
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
@@ -10,6 +13,6 @@ extent.reporter.pdf.out=test output/PdfReport/ExtentPdf.pdf
 #basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 systeminfo.os=Windows
-systeminfo.user=Gayathri Sekar
+#systeminfo.user=Gayathri Sekar
 systeminfo.build=1.1
 systeminfo.AppName=DSAlgo Application
